# practice_rats

./: README.md
books/: pyproject.toml
books/books/: models.py  serializers.py  tests.py  urls.py  views.py
books/books/migrations/: 0001_initial.py  0002_remove_book_photo.py
books/myproject/: settings.py  urls.py
events/: README.md  db.sqlite3  manage.py  models.py  pyproject.toml
events/events/: models.py  serializers.py  urls.py  views.py
events/events/migrations/: 0003_alter_events_id_user.py  0004_remove_events_slug.py
events/migrations/: 0001_initial.py  0002_rename_post_events.py
events/rat/: asgi.py  settings.py  urls.py  wsgi.py
offers/: db.sqlite3  manage.py  pyproject.toml
offers/offers/: models.py  serializers.py  tests.py  urls.py  views.py
offers/offers/migrations/: 0001_initial.py  0002_alter_offer_id_book_alter_offer_id_from_and_more.py
offers/rats_project/: asgi.py  settings.py  urls.py  wsgi.py
users/: README.md  pyproject.toml
users/books/: asgi.py  settings.py  urls.py  wsgi.py
users/static/css/: login.css  register.css
users/users/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
users/users/migrations/: 0001_initial.py
users/users/templates/: base.html
users/users/templates/users/: login.html  register.html  register_done.html
